Mobile alignment fixes

--- a/src/UI/Header/SideDrawer.module.scss
+++ b/src/UI/Header/SideDrawer.module.scss
@@ -9,6 +9,12 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
 
+.drawerControl {
+    position: absolute;
+    top: 15px; left: 20px;
+    font-size: 40px;
+}
+
 @media (min-width: 768px) {
     .side-drawer {
         display: none;
